--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Coinly - Monitor your expenses",
     "short_name": "Coinly",
-    "start_url": "index.html",
+    "start_url": "user.html#signin",
     "theme_color": "rgb(242, 242, 246)",
     "background_color": "#000000",
     "display": "standalone",
